--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>bor主页</title>
   <body style="text-align:center">
-     漫游社区地址： <a  herf="http://roamnets.com/">roamnets.com<a>
+     漫游社区地址： <a  href="http://roamnets.com/">roamnets.com<a>
   </body>
 </html>
