--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <title>bor主页</title>
   <body style="text-align:center">
-     漫游社区地址： <a  href="http://roamnets.com/">roamnets.com<a>
+     BorCoin地址： <a  href="https://etherscan.io/token/0xe77ee2c7d16482bee0da9ca280e58dd0186fe234">BorCoin<a><br/>
+     总量：5千万旧币兑换将发布于此）<br/>（
+     新漫游社区官网： <a href="http://roamnets.com/">roamnets.com<a><br/>（将采用漫游币，暂未发布）
   </body>
 </html>
