--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      新币总量：100亿（这是发行总量，最终总量可能为了其价值根据情况大数量销毁）<br/>
      新官网： <a href="http://borcoin.cn/">borcoin.cn<a><br/><br/>
     
-    开发者声明：主要建立一个：智能合约多虚拟资产的玩家自治社区。主要以borcoin做交易价值和权益证明，之前采用erc20主要以上架交易所方便，现采用波场trc10代币入驻波场开发。<br/>
+    开发者声明：主要建立一个：社区多虚拟资产的玩家自治社区。主要以borcoin做交易价值和权益证明，之前采用erc20主要以上架交易所方便，现采用波场trc10代币入驻波场开发。<br/>
     波场虽然不尽人意，但是实力还是有的，生态也还可行，开发比以太坊廉价，后期如果社区需要，将会启用定制公链（可能采用除波场的其他生态定制链）。
     <br/><br/>
     
