--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>波刃币</title>
-  <body style="text-align:center;">
+  <body style="padding-left: 300px;">
      旧BorCoin地址： <a  href="https://etherscan.io/token/0xe77ee2c7d16482bee0da9ca280e58dd0186fe234">BorCoin ERC20<a><br/>
      新波刃币BorCoin地址： <a  href="https://tronscan.io/#/token/1002417">BorCoin TRC10<a><br/>
     
@@ -13,7 +13,7 @@
     <br/><br/>
     
     ================以下是波刃币开发者发布的最新消息===========<br/>
-    1.旧币持有者现1：1兑换新币，持有者可向bor233@qq.com申请兑换新币。
+    1.旧币持有者现1：1兑换新币，持有者可向bor233@qq.com申请兑换新币。<br/>
     2.项目暂时无任何进展
   </body>
 </html>
