--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <title>波刃币</title>
   <body style="padding-left: 300px;">
+     <img src="http://file.bor233.cn/%E5%BC%80%E5%8F%91%E8%80%85%E5%9B%BE.jpg"/><br/><br/>
      旧BorCoin地址： <a  href="https://etherscan.io/token/0xe77ee2c7d16482bee0da9ca280e58dd0186fe234">BorCoin ERC20<a><br/>
      新波刃币BorCoin地址： <a  href="https://tronscan.io/#/token/1002417">BorCoin TRC10<a><br/>
     
