--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <title>波刃币</title>
-  <body style="padding-left: 300px;">
+  <body style="text-align: center;">
+    <div style="text-align: right;">
      <img style="width: 300px;height: 150px;" src="http://file.bor233.cn/%E5%BC%80%E5%8F%91%E8%80%85%E5%9B%BE.jpg"/><br/><br/>
      旧BorCoin地址： <a  href="https://etherscan.io/token/0xe77ee2c7d16482bee0da9ca280e58dd0186fe234">BorCoin ERC20<a><br/>
      新波刃币BorCoin地址： <a  href="https://tronscan.io/#/token/1002417">BorCoin TRC10<a><br/>
@@ -13,8 +14,9 @@
     波场虽然不尽人意，但是实力还是有的，生态也还可行，开发比以太坊廉价，后期如果社区需要，将会启用定制公链（可能采用除波场的其他生态定制链）。
     <br/><br/>
     
-    ================以下是波刃币开发者发布的最新消息===========<br/>
+    ==========以下是波刃币开发者发布的最新消息======<br/>
     1.旧币持有者现1：1兑换新币，持有者可向bor233@qq.com申请兑换新币。<br/>
     2.项目暂时无任何进展
+   </div>
   </body>
 </html>
