--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>波刃币</title>
+  <title>波刃开发者</title>
   <body style="padding-left:100px;padding-right:100px">
     <div style="text-align: left;">
      <img style="width: 300px;height: 150px;" src="http://file.bor233.cn/%E5%BC%80%E5%8F%91%E8%80%85%E5%9B%BE.jpg"/><br/><br/>
