--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       
      新官网： <a href="http://borcoin.cn/">borcoin.cn<a>（暂不更新了，包括白皮书）<br/><br/>
     
-    开发者声明：主要建立一个以borcoin为主的爱好者社区，以borcoin做交易价值和权益证明，项目为开发者实验性项目，纯属爱好。<br/>之前采用erc20主要以上架交易所方便，现采用波场trc10代币入驻波场开发。<br/>
+    开发者声明：主要建立一个以borcoin为主的爱好者社区，以borcoin做交易价值和权益证明，项目为开发者实验性项目，纯属爱好。<br/>之前采用erc20，现采用波场trc10代币<br/>
     波场虽然不尽人意，但是生态也还可行，开发比以太坊廉价，但是后续也有可能不确定性迁移。
       <br/>borcoin是一个应用层项目，伴随区块链技术发展而进步
     <br/><br/>
