--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       
      新官网： <a href="http://borcoin.cn/">borcoin.cn<a>（暂不更新了，包括白皮书）<br/><br/>
     
-    开发者声明：建立一个可扩展插件的自治论坛网站，以borcoin做交易价值和权益证明，项目为开发者实验性项目，纯属爱好。<br/>之前采用erc20，现采用波场trc10代币<br/>
+    开发者声明：建立一个社区，以borcoin做交易价值和权益证明，项目为开发者实验性项目（没有想好做什么应用），纯属爱好。<br/>之前采用erc20，现采用波场trc10代币<br/>
     波场虽然不尽人意，但是生态也还可行，开发比以太坊廉价，但是后续也有可能不确定性迁移。
       <br/>borcoin是一个应用层项目，伴随区块链技术发展而进步
     <br/><br/>
@@ -19,9 +19,10 @@
     《以下是波刃币开发者发布的最新动态》<br/>
     1.旧币持有者现1：1兑换新币，持有者可向bor233@qq.com申请兑换新币（联系qq:1565458467，或者留下联系方式）<br/>
     2.波场主网tronweb，侧链sunweb的js智能合约开发接口已通过测试<br/>
-    3.研究js4eos对eosforce(eos原力)的智能合约开发<br/>
-    4.其他区块链生态dapp开发的研究<br/>
-    5.项目暂时没有任何进展<br/>
+    3.研究js4eos对eosforce(eos原力)的智能合约开发(已暂停)<br/>
+    4.loom搭建应用侧链并和tronweb主网，sunweb侧链对接的研究(正在进行)<br/>
+    5.其他区块链生态dapp开发的研究<br/>
+    6.项目暂时没有任何进展<br/>
    </div>
   </body>
 </html>
