--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     开发者声明：建立一个社区，以borcoin做交易价值和权益证明，项目为开发者实验性项目（没有想好做什么应用），纯属爱好。<br/>
       之前采用erc20，现采用波场trc10,波场虽然不尽人意，但是生态也还可行，开发比以太坊廉价。<br/>
       borcoin采用tron10以后大概率不会迁移，根据以后决定总量会减少<br/>
-      钱包推荐使用麦子钱包，导入tron账号或者创建，添加资产搜索borcoin <br/>
+      钱包推荐使用 <a href="https://mathwallet.org/zh-cn/">麦子钱包<a> ，导入tron账号或者创建，添加资产搜索borcoin <br/>
       borcoin是一个应用层项目，伴随区块链技术发展而进步<br/>
     <br/><br/>
     
